switched git repos on deploy conf

--- a/deploy.conf
+++ b/deploy.conf
@@ -1,7 +1,7 @@
 [linode]
 user deploy
 host 178.79.152.178
-repo git://github.com/dpwolf/nko-screening-room.git
+repo git@github.com:dpwolf/Screening-Room.git
 ref origin/master
 path /home/deploy/app
 post-deploy npm install && [ -e ../shared/pids/node.pid ] && sudo restart node || sudo start node
